sfdx-source/force-app/main/default/objects/Cross_Object_Status_Mapping__mdt/Cross_Object_Status_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>LEM-13508: It contains the cross object status mappings.</description>
    <label>Cross Object Status Mapping</label>
    <pluralLabel>Cross Object Status Mappings</pluralLabel>
</CustomObject>