sfdx-source/force-app/main/default/objects/Cross_Object_Status_Mapping__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <defaultValue>true</defaultValue>
    <description>LEM-13508: It indicates if the record is active or not.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>