sfdx-source/force-app/main/default/objects/Cross_Object_Status_Mapping__mdt/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13508: It is used to store the scenario of the status update.</description>
    <label>Process</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>