sfdx-source/force-app/main/default/objects/Cross_Object_Status_Mapping__mdt/fields/Target_Status__c.field-meta.xml
<CustomField>
    <fullName>Target_Status__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13508: It contains the value for the target status field mapping.</description>
    <label>Target Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>